kubedefs/appdeploy.yaml
apiVersion: app/v1
kind: Deployment
metadata:
  name: vproapp-tomcat
  labels: 
    app: vproapp
spec:             # Deployment specifications
  replicas: 1
  selector:
    matchLabels:
      app: vproapp
  template:
    metadata:
      labels:
        app: vproapp    
    spec:         # configuration for the pod that gets created under this deployment
      containers:
      - name: vproapp-container
        image: devopper000/vprofileapp
        ports:
        - name: vproapp-port
          containerPort: 8080   # tomcat application port inside the pod
