kubedefs/dbdeploy.yaml
apiVersion: v1
kind: Deployment
metadata:
  labels: 
  app: vprodb
spec:             # Deployment specifications
  replicas: 1
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      labels:
        name: mysql
        app: vprodb    
    spec:         # cofnguration for the pod that gets created under this deployment
      containers:
      - name: mysql
        image: devopper000/vprofiledb
        ports:
        - containerPort: 3306   # MySQL default port as in the specified container image from my dockerhub acc
        volumeMounts:
        - name: mysql-storage  # Persistent volume claim for MySQL data
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
        claimName: db-pvc
