kubedefs/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprodb-svc
spec:
  selector:
    app: vprodb    # Service (vprodb-svc) will connect to the Deployment's Pods based on the selector match
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  type: ClusterIP  # This service will be accessible within the cluster only
