kubedefs/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vproapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "vprofile.thedev-oper.space"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: vproapp-svc
            port:
              number: 8080
